[metadata]
name = pyCML
version = attr: cml.__version__
url = https://github.com/andremartinon/cml
author = André Ricardo Fazanaro Martinon
author_email = martinon@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = Coupled Map Lattice
long_description = file: README.md
long_description_content_type = text/markdown

[options]
include_package_data = False
packages =
    cml
install_requires =
    numpy
    matplotlib
    scikit-image
    scipy
    colorednoise


python_requires = >=3.6